updates needed for GENIE 3.04

--- a/genie/CMakeLists.txt
+++ b/genie/CMakeLists.txt
@@ -13,32 +13,28 @@ if( ${GENIE_MAJOR_VERSION} LESS 3 )
   add_definitions(-DGENIE_PRE_R3)
 endif()
 
-set(ART_VERSION $ENV{ART_VERSION})
-# if using ART pre-link to libraries using find_library
-if ( "${ART_VERSION}" STREQUAL "" )
-  # for now don't pre-link unless ART's around
-else()
-  # log4cpp
-  find_library( LOG4CPP NAMES log4cpp PATHS ENV LOG4CPP_LIB NO_DEFAULT_PATH )
-  #  XML parser
-  set( LIBXML2_LIB_DIR $ENV{LIBXML2_FQ_DIR}/lib )
-  find_library( XML2 NAMES xml2 PATHS ${LIBXML2_LIB_DIR} NO_DEFAULT_PATH )
+# log4cpp
+find_library( LOG4CPP NAMES log4cpp PATHS ENV LOG4CPP_LIB NO_DEFAULT_PATH )
+#  XML parser
+set( LIBXML2_LIB_DIR $ENV{LIBXML2_FQ_DIR}/lib )
+find_library( XML2 NAMES xml2 PATHS ${LIBXML2_LIB_DIR} NO_DEFAULT_PATH )
 
-  if( ${GENIE_MAJOR_VERSION} LESS 3 )
-    find_library( GPDG NAMES GPDG PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
-    find_library( GUTILS NAMES GUtils PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
-    find_library( GFLUXDRIVERS NAMES GFluxDrivers PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
-    find_library( GEVGDRIVERS NAMES GEVGDrivers PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
-    find_library( GMESSENGER NAMES GMessenger PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
-    find_library( GNUMERICAL NAMES GNumerical PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
-  else()
-    find_library( GMESSENGER NAMES GFwMsg PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
-    find_library( GNUMERICAL NAMES GFwNum PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
-    find_library( GUTILS     NAMES GFwUtl PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
-    find_library( GPDG     NAMES GFwParDat PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
-    find_library( GEVGDRIVERS NAMES GFwEG  PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
-    find_library( GFLUXDRIVERS NAMES GTlFlx PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
-  endif()
+if( ${GENIE_MAJOR_VERSION} LESS 3 )
+  find_library( GPDG NAMES GPDG PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
+  find_library( GUTILS NAMES GUtils PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
+  find_library( GFLUXDRIVERS NAMES GFluxDrivers PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
+  find_library( GEVGDRIVERS NAMES GEVGDrivers PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
+  find_library( GMESSENGER NAMES GMessenger PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
+  find_library( GNUMERICAL NAMES GNumerical PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
+else()
+  find_library( GALGORITHM NAMES GFwAlg  PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
+  find_library( GHEP       NAMES GFwGHEP PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
+  find_library( GMESSENGER NAMES GFwMsg  PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
+  find_library( GNUMERICAL NAMES GFwNum  PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
+  find_library( GUTILS     NAMES GFwUtl  PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
+  find_library( GPDG       NAMES GFwParDat PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
+  find_library( GEVGDRIVERS NAMES GFwEG  PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
+  find_library( GTOOLFLUXDRIVERS NAMES GTlFlx PATHS ENV GENIE_LIB NO_DEFAULT_PATH )
 endif()
 
 MESSAGE("--DK2NU-- WITH_GENIE or GENIE_ONLY was true")
@@ -121,7 +117,10 @@ target_link_libraries(dk2nuGenie ${ROOT_LIBRARIES}
   ${ROOT_Physics_LIBRARY} ${ROOT_Matrix_LIBRARY}
   ${ADD_ROOT_Imt_LIBRARY} ${TBB_LIBRARY}
   dk2nuTree
+  ${GALGORITHM}
   ${GFLUXDRIVERS}
+  ${GHEP}
+  ${GTOOLFLUXDRIVERS}
   ${GEVGDRIVERS}
   ${GPDG}
   ${GUTILS}
