Adds some simple, but useable, Python bindings
  - Adds pybind11 bindings to the class structure
    used in the dk2nu and dkmeta trees
  - Adds a helper class for reading TChains of dk2nu
    files so that we can avoid compatibility problems with
    any ROOT-generated bindings used when reading trees in
    python.
  - If enabled at build time with -DDK2NU_PYTHON_ENABLED=ON
    then they will be installed to PREFIX/python{pyvmaj,pyvmin}/pydk2nu
  - See python/README.md for more details.
  - Adds some example python scripts that produce flux predictions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ option(GENIE_ONLY "Build only GENIE flux driver" OFF)
 option(DK2NUDATA_DIR "path the dk2nu data half of package if GENIE_ONLY" "")
 option(WITH_TBB "Build in linkage to TBB library" ON)
 option(COPY_AUX "install etc, convert, snippets subdirectories" ON)
+option(DK2NU_PYTHON_ENABLED "Enable the building of python bindings" OFF)
 
 execute_process(COMMAND root-config --version OUTPUT_VARIABLE ROOT_VERSION)
 string(STRIP ${ROOT_VERSION} ROOT_VERSION)
@@ -127,6 +128,10 @@ else()
     add_subdirectory(genie)
     MESSAGE("--DK2NU-- Both tree & GENIE flux driver building enabled")
   endif()
+endif()
+
+if(DK2NU_PYTHON_ENABLED)
+  add_subdirectory(python)
 endif()
 
 #----------------------------------------------------------------------------
